packages/core/src/components/bce-color/bce-color.scss
@import '../../../scss/input-creator.scss';

:host {
  @include bce-color-default(primary);
  position: relative;
  display: flex;
  margin: 20px 0;
  height: 48px;

  .container {
    position: relative;
    width: 100%;
    background-color: bce-color(surface);
    border: 1px solid bce-color-on(surface, 4);
    border-radius: 4px;
    transition: border-color 0.3s ease-in-out;
    z-index: 1;

    input {
      position: absolute;
      left: 3px;
      width: calc(100% - 6px);
      top: 3px;
      bottom: 3px;
      padding: 0;
      outline: none;
      height: inherit;
      border: none;
      border-radius: 4px;
      cursor: pointer;

      &::-webkit-color-swatch-wrapper {
        padding: 0;
      }

      &::-webkit-color-swatch {
        border: none;
        border-radius: 2px;
      }

      &:last-of-type {
        left: auto;
        top: 10px;
        bottom: 10px;
        right: 10px;
        width: 40%;
        opacity: 0.87;
      }
    }

    .preview {
      position: absolute;
      left: 10px;
      bottom: 10px;
      display: inline-flex;
      width: 200px;
      height: 10px;
      border-radius: 4px;
      pointer-events: none;

      div {
        @include elevate(1);
        margin: 0 2px;
        border-radius: 2px;
        width: 10px;
        height: 10px;
      }

      :nth-child(1) {
        background-color: bce-color(300);
      }

      :nth-child(2) {
        background-color: bce-color(400);
      }

      :nth-child(3) {
        background-color: bce-color(500);
      }

      :nth-child(4) {
        background-color: bce-color(600);
      }

      :nth-child(5) {
        background-color: bce-color(700);
      }

      :nth-child(6) {
        background-color: bce-color-on(1);
      }

      :nth-child(7) {
        background-color: bce-color-on(2);
      }

      :nth-child(8) {
        background-color: bce-color-on(3);
      }

      :nth-child(9) {
        background-color: bce-color-on(4);
      }
    }
  }

  bce-button {
    @include bce-color-inherit();
    position: absolute;
    right: 2px;
    bottom: -28px;
  }
}

:host([disabled]) {
  .container {
    background-color: bce-color-on(surface, 4);
    color: bce-color-on(surface, 3);
    border-color: bce-color-on(surface, 4);

    input {
      opacity: 0.6;
    }
  }
}

:host([focus]) {
  .container {
    border-color: bce-color();

    input:focus {
      border: 1px solid bce-color-on(300);
    }
  }
}

:host([error]) {
  bce-label {
    color: bce-color(error);
  }

  .container {
    border-color: bce-color(error);
  }
}

:host([label]) {
  bce-label {
    position: absolute;
    margin: 7px 12px;
    font-size: 0.8em;
    color: bce-color-on();
    transition: all 0.15s cubic-bezier(0.4, 0, 0.2, 1);
    z-index: 2;
  }
}

@include media-medium {
  :host(:not([compact])) {
    height: 40px;
  }

  :host(:not([compact])[label]) bce-label {
    flex: 0 0 25%;
    position: initial;
    margin: 0;
    color: bce-color-on(surface);
    font-size: initial;
    line-height: 40px;
  }

  :host(:not([compact])[label][focus]) bce-label {
    color: bce-color();
  }
}

